Space word-wrapping long sponsor names correctly

--- a/euctr/static/scss/site.scss
+++ b/euctr/static/scss/site.scss
@@ -761,9 +761,10 @@ li.search-pill a {
   }
 
   #chartcopy-4 {
-    margin-top: -12px;
+    margin-top: -4px;
     font-size: 32px;
-    line-height: 48px;
+    line-height: 32px;
+    margin-bottom: 8px;
     color: $gray-dark;
     text-align: center;
     text-align-last: center;
